<resources>
    <string name="app_name">作物诊断</string>
    <!--<string name="app_name">CropDiagnosis</string>-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="password">密码:</string>
    <string name="username">用户名:</string>
    <string name="telphone_number">手机号码:</string>
    <string name="check_code">验证码:</string>
    <string name="get_check_code">获取验证码</string>
    <string name="chose_register_type">请选择注册类型:</string>
    <string name="chose_register_type_person">个人注册</string>
    <string name="chose_register_type_company">公司注册</string>
    <string name="retry_password">再次输入密码:</string>
    <string name="village">所在村镇</string>
    <string name="reset">重置</string>
    <string name="home">主页</string>
    <string name="disease_history">病害历史</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="spinner_thickness">3dp</string>
    <string name="spinner_crop_chose_hint">选择作物</string>
    <string name="spinner_duration_chose_hint">选择时间</string>
    <string name="spinner_status_chose_hint">选择状态</string>
    <string name="spinner_evaluate_chose_hint">选择评价</string>
    <string name="spinner_location_chose_hint">选择所在地</string>
    <string name="crop">请选择作物：    </string>
    <string name="spinner_duration">时间: </string>
    <string name="status">\t状态: </string>
    <string name="crop_time">\t时间:</string>
    <string name="diagnosed">已诊断</string>
    <string name="not_diagnosed">未诊断</string>
    <string name="please_add_image">请添加图片：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illustration">请输入对病害情况的说明：</string>
    <string name="disease_illustration">点我开始输入</string>
    <string name="submit">提交</string>
    <string name="disease_submit">病害采集</string>
    <string name="username_not_allow_empty">用户名不能为空</string>
    <string name="password_not_allow_empty">密码不能为空</string>
    <string name="load_data_failed">数据加载失败</string>
    <string name="title_activity_crop_disease_condition">CropDiseaseCondition</string>
    <string name="title_activity_disease_condition">病害内容</string>

    <string name="caption">图片说明：</string>
    <string name="explanatory_note">文字说明: </string>
    <string name="diagnosis">查看诊断结果</string>
    <string name="disease_name">病名：</string>
    <string name="disease_cause">病因：</string>
    <string name="solution">解决方法</string>
    <string name="solution_time">时间： </string>
    <string name="accept_person">受理人： </string>
    <string name="evaluate">评价 </string>
    <string name="supplementary_instruction">补充 </string>
    <string name="submiting">提交中</string>
    <string name="title_activity_diagnose">诊断结果</string>
    <string name="title_activity_user_information">个人信息</string>
    <string name="title_activity_user_info_safe">账号与安全</string>
    <string name="title_activity_edit_info">完善个人信息</string>

</resources>
