<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.developer.cropdiagnosis.mvp.ui.activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_scrollFlags="enterAlways|scroll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center_horizontal"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_tel_number_register"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telphone_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_register"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_repassword_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retry_password" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_check_code"
            android:id="@+id/btn_get_check_code" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btn_get_check_code"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_check_code_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_code" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:gravity="center"
            android:text="@string/chose_register_type"/>

            <RadioButton
                android:layout_marginLeft="15dp"
                android:id="@+id/rd_person_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chose_register_type_person"/>

            <RadioButton
                android:id="@+id/rd_company_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chose_register_type_company"/>

    </RadioGroup>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="请填写所在地址"/>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:layout_weight="1"
                android:id="@+id/spin_province_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <Spinner
                android:layout_weight="1"
                android:id="@+id/spin_city_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <Spinner
                android:id="@+id/spin_county_register"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_village_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/village" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btn_register_register"
            style="?android:textAppearanceSmall"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textStyle="bold" />

        <Button

            android:id="@+id/btn_reset_register"
            style="?android:textAppearanceSmall"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/pb_load_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>
