<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.developer.cropdiagnosis.mvp.ui.fragments.DiseaseSubmitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/crop" />

                <Spinner
                    android:id="@+id/mspin_crop_kind_disease_submit"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />
            </LinearLayout>


            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/please_add_image" />

            <android.support.v7.widget.RecyclerView
                android:layout_margin="10dp"
                android:id="@+id/rv_pic_monitor_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:fadingEdge="none"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/list_item_image" />

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/illustration" />

            <EditText
                android:layout_margin="10dp"
                android:id="@+id/et_disease_illustration_disease_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:hint="@string/disease_illustration" />

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btn_submit_disease_disease_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
