<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_disease_condition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.developer.cropdiagnosis.mvp.ui.activities.condition.DiseaseConditionActivity">

    <TextView
        android:id="@+id/picture_instruction"
        android:text="@string/caption"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spins_wrapper"/>
    <ImageView
        android:layout_centerInParent="true"
        android:id="@+id/image_crop"
        android:scaleType="centerCrop"
        android:layout_below="@+id/picture_instruction"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@mipmap/crop_background"/>
        <!--android:layout_width="150dp"-->

    <Button
        android:id="@+id/crop_diagnose_btn"
        android:text="@string/diagnosis"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/content_word_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/disease_btn_submit"
        android:layout_below="@+id/diagnose_condition_4"
        android:text="提交"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/explanatory_note"
        android:textSize="20dp"
        android:layout_marginTop="14dp"
        android:id="@+id/word_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_crop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/content_word_instruction"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#000000"
        android:background="#F5F5F5"
        android:layout_below="@+id/word_instruction"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/diagnose_condition_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/crop_diagnose_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/diagnose_condition_6"
            android:layout_below="@+id/diagnose_condition_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/supplementary_instruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="4"/>
            <TextView
                android:id="@+id/supplementary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <!--<fr.ganfra.materialspinner.MaterialSpinner-->
            <!--android:id="@+id/evaluate_selection"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="3"-->
            <!--app:ms_arrowColor="@color/spinner_arrow_color"-->
            <!--app:ms_baseColor="@color/spinner_base_color"-->
            <!--app:ms_enableErrorLabel="true"-->
            <!--app:ms_enableFloatingLabel="true"-->
            <!--app:ms_floatingLabelColor="@color/spinner_floating_label_color"-->
            <!--app:ms_floatingLabelText="@string/evaluate"-->
            <!--app:ms_hint="@string/spinner_evaluate_chose_hint"-->
            <!--app:ms_multiline="false" />-->
    </LinearLayout>

</RelativeLayout>
